Добавлено использование локальных копий библиотек
Signed-off-by: Kostiantyn Kostiuk <kostyanf14@live.com>

--- a/app/web/www/templates/wrapper.html
+++ b/app/web/www/templates/wrapper.html
@@ -6,13 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
         <title>VTL Automation</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
+        <link rel="stylesheet" href="/static/stylesheets/semantic.min.css" integrity="sha256-UXesixbeLkB/UYxVTzuj/gg3+LMzgwAmg3zD+C4ZASQ=">
+        <link rel="stylesheet" href="/static/stylesheets/main.css" integrity="sha256-1Yf1Cy9K3bN8XgnhrvsuRRWA38MNxt63Ld16pA3KDdA=">
 
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+        <script src="/static/javascripts/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="></script>
+        <script src="/static/javascripts/semantic.min.js" integrity="sha256-CgSoWC9w5wNmI1aN8dIMK+6DPelUEtvDr+Bc2m/0Nx8="></script>
+        <script src="/static/javascripts/main.js" integrity="sha256-47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU="></script>
 
-        <link rel="stylesheet" href="/static/stylesheets/main.css">
-        <script src="/static/javascripts/main.js"></script>
         <link rel="icon" type="image/ico" href="/static/images/favicon.ico"/>
 
         {% block head %}
