Add device list page
Signed-off-by: Konstantin Kostiuk <kkostiuk@redhat.com>

--- a/app/web/www/templates/menu.html
+++ b/app/web/www/templates/menu.html
@@ -1,6 +1,6 @@
 <div class="ui pointing menu">
     <a class="item">Правила</a>
-    <a class="active item">Пристрої</a>
+    <a class="active item" href="/devices">Пристрої</a>
     <a class="item" href="">Користувачі</a>
     <div class="right menu">
         <div class="item">
