Add rules pages

--- a/app/web/www/templates/menu.html
+++ b/app/web/www/templates/menu.html
@@ -1,5 +1,5 @@
 <div class="ui pointing menu">
-    <a class="item">Правила</a>
+    <a class="item" href="/rules">Правила</a>
     <a class="active item" href="/devices">Пристрої</a>
     <a class="item" href="">Користувачі</a>
     <div class="right menu">
