Add the list of users

--- a/app/web/www/templates/menu.html
+++ b/app/web/www/templates/menu.html
@@ -1,7 +1,7 @@
 <div class="ui pointing menu">
     <a class="item" href="/rules">Правила</a>
     <a class="active item" href="/devices">Пристрої</a>
-    <a class="item" href="">Користувачі</a>
+    <a class="item" href="/users">Користувачі</a>
     <div class="right menu">
         <div class="item">
             <a class="ui blue button icon" href="/auth/logout"><i aria-hidden="true" class="log out icon"></i></a>
