--- a/app/web/www/templates/wrapper.html
+++ b/app/web/www/templates/wrapper.html
@@ -11,7 +11,7 @@
 
         <script src="/static/javascripts/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="></script>
         <script src="/static/javascripts/semantic.min.js" integrity="sha256-CgSoWC9w5wNmI1aN8dIMK+6DPelUEtvDr+Bc2m/0Nx8="></script>
-        <script src="/static/javascripts/main.js" integrity="sha256-47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU="></script>
+        <script src="/static/javascripts/main.js"></script>
 
         <link rel="icon" type="image/ico" href="/static/images/favicon.ico"/>
 
