Add day of week to rule
resolves: #19

Signed-off-by: Kostiantyn Kostiuk <kostyanf14@live.com>

--- a/app/web/static/stylesheets/main.css
+++ b/app/web/static/stylesheets/main.css
@@ -18,3 +18,8 @@ html {
     padding-top: 5em;
     padding-bottom: 5em;
 }
+
+.vertical-text {
+    writing-mode: vertical-rl;
+    transform: rotate(180deg);
+}
