--- a/app/web/www/templates/wrapper.html
+++ b/app/web/www/templates/wrapper.html
@@ -7,7 +7,7 @@
 
         <title>VTL Automation</title>
         <link rel="stylesheet" href="/static/stylesheets/semantic.min.css" integrity="sha256-UXesixbeLkB/UYxVTzuj/gg3+LMzgwAmg3zD+C4ZASQ=">
-        <link rel="stylesheet" href="/static/stylesheets/main.css" integrity="sha256-1Yf1Cy9K3bN8XgnhrvsuRRWA38MNxt63Ld16pA3KDdA=">
+        <link rel="stylesheet" href="/static/stylesheets/main.css">
 
         <script src="/static/javascripts/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="></script>
         <script src="/static/javascripts/semantic.min.js" integrity="sha256-CgSoWC9w5wNmI1aN8dIMK+6DPelUEtvDr+Bc2m/0Nx8="></script>
