Add the rule scheduler management page

--- a/app/web/www/templates/menu.html
+++ b/app/web/www/templates/menu.html
@@ -2,6 +2,7 @@
     <a class="item" href="/rules">Правила</a>
     <a class="active item" href="/devices">Пристрої</a>
     <a class="item" href="/users">Користувачі</a>
+    <a class="item" href="/rule_scheduler">Rule Scheduler</a>
     <div class="right menu">
         <div class="item">
             <a class="ui blue button icon" href="/auth/logout"><i aria-hidden="true" class="log out icon"></i></a>
