Set the active menu item

--- a/app/web/www/templates/menu.html
+++ b/app/web/www/templates/menu.html
@@ -1,8 +1,16 @@
 <div class="ui pointing menu">
-    <a class="item" href="/rules">Правила</a>
-    <a class="active item" href="/devices">Пристрої</a>
-    <a class="item" href="/users">Користувачі</a>
-    <a class="item" href="/rule_scheduler">Rule Scheduler</a>
+    <a class="{{ 'active' if active_tab is defined and active_tab == 'rules' }} item" href="/rules">
+        Правила
+    </a>
+    <a class="{{ 'active' if active_tab is defined and active_tab == 'devices' }} item" href="/devices">
+        Пристрої
+    </a>
+    <a class="{{ 'active' if active_tab is defined and active_tab == 'users' }} item" href="/users">
+        Користувачі
+    </a>
+    <a class="{{ 'active' if active_tab is defined and active_tab == 'rule_scheduler' }} item" href="/rule_scheduler">
+        Rule Scheduler
+    </a>
     <div class="right menu">
         <div class="item">
             <a class="ui blue button icon" href="/auth/logout"><i aria-hidden="true" class="log out icon"></i></a>
