Add audio file uploading

--- a/app/web/www/templates/menu.html
+++ b/app/web/www/templates/menu.html
@@ -11,6 +11,9 @@
     <a class="{{ 'active' if active_tab is defined and active_tab == 'rule_scheduler' }} item" href="/rule_scheduler">
         Rule Scheduler
     </a>
+    <a class="{{ 'active' if active_tab is defined and active_tab == 'audio_files' }} item" href="/audio_files">
+        Аудіо файли
+    </a>
     <div class="right menu">
         <div class="item">
             <a class="ui blue button icon" href="/auth/logout"><i aria-hidden="true" class="log out icon"></i></a>
