--- a/app/web/www/templates/menu.html
+++ b/app/web/www/templates/menu.html
@@ -14,6 +14,9 @@
     <a class="{{ 'active' if active_tab is defined and active_tab == 'audio_files' }} item" href="/audio_files">
         Аудіо файли
     </a>
+    <a class="{{ 'active' if active_tab is defined and active_tab == 'commands' }} item" href="/commands">
+        Керування пристроями
+    </a>
     <div class="right menu">
         <div class="item">
             <a class="ui blue button icon" href="/auth/logout"><i aria-hidden="true" class="log out icon"></i></a>
